# Airline-Satisfaction-Classification

./: README.md  app-prod.py  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: EDA.ipynb  ML.ipynb  app-ml.ipynb  preprocessing.ipynb
