[tool.poetry]
name = "airline-satisfaction-classification"
version = "0.1.0"
description = ""
authors = ["jaylesmajor <143688733+jaylesmajor@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
imblearn = "^0.0"
lightgbm = "^4.5.0"
streamlit = "^1.41.1"
llvmlite = "^0.43.0"
numba = "^0.60.0"
shap = "^0.46.0"
lime = "^0.2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
